stop installing the etc/afs

--- a/src/etc/mtree/4.4BSD.dist
+++ b/src/etc/mtree/4.4BSD.dist
@@ -1,4 +1,4 @@
-#	$OpenBSD: 4.4BSD.dist,v 1.223 2012/06/20 19:03:06 matthew Exp $
+#	$OpenBSD: 4.4BSD.dist,v 1.224 2012/07/07 16:00:55 robert Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 # .
@@ -22,11 +22,6 @@ dev
 
 # ./etc
 etc
-
-# ./etc/afs
-afs
-# ./etc/afs
-..
 
 # ./etc/amd
 amd
