--- a/src/etc/Makefile
+++ b/src/etc/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.320 2012/08/20 12:37:52 dlg Exp $
+#	$OpenBSD: Makefile,v 1.321 2012/08/23 06:17:58 deraadt Exp $
 
 TZDIR=		/usr/share/zoneinfo
 LOCALTIME=	Canada/Mountain
@@ -333,8 +333,8 @@ update-moduli:
 	bootblocks ${ALL_KERNELS}
 	
 
-SUBDIR+= etc.alpha etc.amd64 etc.armish etc.aviion etc.hp300 etc.hppa
-SUBDIR+= etc.hppa64 etc.i386 etc.landisk etc.loongson etc.luna88k 
+SUBDIR+= etc.alpha etc.amd64 etc.armish etc.aviion etc.beagle etc.hp300
+SUBDIR+= etc.hppa etc.hppa64 etc.i386 etc.landisk etc.loongson etc.luna88k 
 SUBDIR+= etc.macppc etc.mvme68k etc.mvme88k etc.palm
 SUBDIR+= etc.sgi etc.socppc etc.sparc etc.sparc64 etc.vax etc.zaurus
 
