--- a/src/sys/arch/sparc/conf/Makefile.sparc
+++ b/src/sys/arch/sparc/conf/Makefile.sparc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.sparc,v 1.72 2011/07/07 22:28:18 guenther Exp $
+#	$OpenBSD: Makefile.sparc,v 1.73 2011/11/08 18:41:34 matthieu Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -33,7 +33,7 @@ CMACHFLAGS+=	-mcpu=supersparc
 .endif
 CMACHFLAGS+=	-fno-builtin-printf -fno-builtin-snprintf \
 		-fno-builtin-vsnprintf -fno-builtin-log \
-		-fno-builtin-log2 -fno-builtin-malloc 
+		-fno-builtin-log2 -fno-builtin-malloc ${NOPIE_FLAGS}
 .if ${IDENT:M-DNO_PROPOLICE}
 CMACHFLAGS+=	-fno-stack-protector
 .endif
