--- a/src/gnu/usr.bin/binutils-2.17/Makefile.bsd-wrapper
+++ b/src/gnu/usr.bin/binutils-2.17/Makefile.bsd-wrapper
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.bsd-wrapper,v 1.2 2011/07/04 23:58:26 drahn Exp $
+#	$OpenBSD: Makefile.bsd-wrapper,v 1.3 2011/11/16 18:57:54 schwarze Exp $
 
 OLD_TOOLCHAIN=m68k m88k vax
 
@@ -13,6 +13,7 @@ USING_OLD_TOOLCHAIN?=no
 SUBDIRS=	opcodes bfd
 CONF_SUBDIRS=	opcodes bfd
 
+CFLAGS+=	${PIE_DEFAULT}
 # This allows moving the whole binutils installation around for 
 # testing purposes
 PREFIX=/usr
