--- a/src/sys/arch/loongson/conf/Makefile.loongson
+++ b/src/sys/arch/loongson/conf/Makefile.loongson
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.loongson,v 1.33 2011/11/08 18:41:34 matthieu Exp $
+#	$OpenBSD: Makefile.loongson,v 1.34 2012/08/23 15:09:10 deraadt Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -45,7 +45,8 @@ CMACHFLAGS+=	-fno-stack-protector
 COPTS?=		-O2
 CFLAGS=		${DEBUG} ${CWARNFLAGS} ${CMACHFLAGS} ${COPTS} ${PIPE}
 AFLAGS=		-D_LOCORE -x assembler-with-cpp ${CMACHFLAGS}
-LINKFLAGS=	-e start -T ${_machdir}/conf/ld.script -Ttext=${LINK_ADDRESS} -warn-common
+LINKFLAGS=	-e start -T ${_machdir}/conf/ld.script -Ttext=${LINK_ADDRESS} \
+		-warn-common -nopie
 
 .if ${IDENT:M-DDDB_STRUCT}
 DB_STRUCTINFO=	db_structinfo.h
