--- a/src/sys/arch/socppc/conf/Makefile.socppc
+++ b/src/sys/arch/socppc/conf/Makefile.socppc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.socppc,v 1.34 2011/11/08 18:41:34 matthieu Exp $
+#	$OpenBSD: Makefile.socppc,v 1.35 2012/08/22 16:58:26 pascal Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -38,7 +38,7 @@ CMACHFLAGS+=	-fno-stack-protector
 COPTS?=		-O2
 CFLAGS=		${DEBUG} ${CWARNFLAGS} ${CMACHFLAGS} ${COPTS} ${PIPE}
 AFLAGS=		-D_LOCORE ${CMACHFLAGS}
-LINKFLAGS=	-N -Ttext 200000 -e start --warn-common
+LINKFLAGS=	-N -Ttext 200000 -e start --warn-common -nopie
 
 .if ${IDENT:M-DDDB_STRUCT}
 DB_STRUCTINFO=	db_structinfo.h
