--- a/src/sys/arch/solbourne/conf/Makefile.solbourne
+++ b/src/sys/arch/solbourne/conf/Makefile.solbourne
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.solbourne,v 1.37 2011/11/08 18:41:34 matthieu Exp $
+#	$OpenBSD: Makefile.solbourne,v 1.38 2012/08/22 16:58:26 pascal Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -38,7 +38,8 @@ CMACHFLAGS+=	-fno-stack-protector
 COPTS?=		-O2
 CFLAGS=		${DEBUG} ${CWARNFLAGS} ${CMACHFLAGS} ${COPTS} ${PIPE}
 AFLAGS=		-D_LOCORE -x assembler-with-cpp -traditional-cpp ${CMACHFLAGS}
-LINKFLAGS=	-N -e start -T ${_machdir}/conf/ld.script -Ttext FD084000 --warn-common
+LINKFLAGS=	-N -e start -T ${_machdir}/conf/ld.script -Ttext FD084000 \
+		--warn-common -nopie
 
 .if ${IDENT:M-DDDB_STRUCT}
 DB_STRUCTINFO=	db_structinfo.h
