--- a/src/sys/arch/sparc/conf/Makefile.sparc
+++ b/src/sys/arch/sparc/conf/Makefile.sparc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.sparc,v 1.73 2011/11/08 18:41:34 matthieu Exp $
+#	$OpenBSD: Makefile.sparc,v 1.74 2012/08/23 15:09:10 deraadt Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -41,7 +41,7 @@ CMACHFLAGS+=	-fno-stack-protector
 COPTS?=		-O2
 CFLAGS=		${DEBUG} ${CWARNFLAGS} ${CMACHFLAGS} ${COPTS} ${PIPE}
 AFLAGS=		-D_LOCORE -x assembler-with-cpp -traditional-cpp ${CMACHFLAGS}
-LINKFLAGS=	-N -e start -Ttext F8004000 --warn-common
+LINKFLAGS=	-N -e start -Ttext F8004000 --warn-common -nopie
 
 .if ${IDENT:M-DDDB_STRUCT}
 DB_STRUCTINFO=	db_structinfo.h
