--- a/src/sys/arch/amd64/stand/cdbr/Makefile
+++ b/src/sys/arch/amd64/stand/cdbr/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.3 2004/10/09 21:15:21 mickey Exp $
+#	$OpenBSD: Makefile,v 1.4 2012/08/21 14:46:18 pascal Exp $
 #
 
 PROG=	cdbr
@@ -6,11 +6,11 @@ SRCS=	cdbr.S
 AFLAGS+=-m32 -I${.CURDIR} -I${.CURDIR}/../../.. #-Wa,-a
 AFLAGS+=-DOSREV=\"${OSREV}\"
 AFLAGS+=-DMACH=\"${MACHINE}\" -DMACH_U=\"${MACHINE:U}\"
-AFLAGS+=${NOPIE_FLAGS}
+AFLAGS+=-fno-pie
 LD=ld
 ORG=	0x0000
 LDFLAGS=-melf_i386 -nostdlib -Ttext ${ORG} -x -N -s -Bstatic -e start
-LDFLAGS+=-L/usr/libdata 
+LDFLAGS+=-nopie -L/usr/libdata 
 
 NOMAN=
 #MAN+=	cdbr.8
