--- a/src/sys/arch/amd64/stand/mbr/Makefile
+++ b/src/sys/arch/amd64/stand/mbr/Makefile
@@ -1,13 +1,13 @@
-#	$OpenBSD: Makefile,v 1.3 2004/10/09 21:15:21 mickey Exp $
+#	$OpenBSD: Makefile,v 1.4 2012/08/21 14:46:18 pascal Exp $
 #
 
 PROG=	mbr
 SRCS=	mbr.S
 AFLAGS+=-m32 -I${.CURDIR} -I${.CURDIR}/../../.. #-Wa,-a
-AFLAGS+=${NOPIE_FLAGS}
+AFLAGS+=-fno-pie
 LD=ld
 LDFLAGS=-melf_i386 -nostdlib -Ttext 0 -x -N -s -Bstatic -e start
-LDFLAGS+=-L/usr/libdata 
+LDFLAGS+=-nopie -L/usr/libdata 
 
 NOMAN=
 #MAN+=	mbr.8
