--- a/src/sys/arch/i386/stand/libz/Makefile
+++ b/src/sys/arch/i386/stand/libz/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.11 2003/12/18 02:27:13 millert Exp $
+#	$OpenBSD: Makefile,v 1.12 2012/08/21 14:46:18 pascal Exp $
 #	$NetBSD: Makefile,v 1.2 1997/01/22 01:36:30 cgd Exp $
 
 S=${.CURDIR}/../../../..
@@ -10,4 +10,4 @@ NOPIE=
 .PATH: ${S}/lib/libz
 
 .include "${S}/lib/libz/Makefile"
-CFLAGS+=${SACFLAGS} -I${S}/lib/libsa ${DEBUGFLAGS}
+CFLAGS+=${SACFLAGS} -I${S}/lib/libsa ${DEBUGFLAGS} -fno-pie
