--- a/src/sys/arch/i386/stand/mbr/Makefile
+++ b/src/sys/arch/i386/stand/mbr/Makefile
@@ -1,12 +1,12 @@
-#	$OpenBSD: Makefile,v 1.14 2003/04/17 03:43:19 drahn Exp $
+#	$OpenBSD: Makefile,v 1.15 2012/08/21 14:46:18 pascal Exp $
 #
 
 PROG=	mbr
 SRCS=	mbr.S
 AFLAGS+=-I${.CURDIR} -I${.CURDIR}/../../.. #-Wa,-a
-AFLAGS+=${NOPIE_FLAGS}
+AFLAGS+=-fno-pie
 LD=ld
-LDFLAGS=-nostdlib -Ttext 0 -x -N -s -Bstatic -e start
+LDFLAGS=-nostdlib -Ttext 0 -x -N -s -Bstatic -e start -nopie
 
 NOMAN=
 #MAN+=	mbr.8
