--- a/src/sys/arch/sparc64/stand/libz/Makefile
+++ b/src/sys/arch/sparc64/stand/libz/Makefile
@@ -1,10 +1,9 @@
-#	$OpenBSD: Makefile,v 1.6 2003/12/17 05:17:07 millert Exp $
+#	$OpenBSD: Makefile,v 1.7 2012/08/21 14:46:20 pascal Exp $
 
 S=${.CURDIR}/../../../..
 ZDST=${.OBJDIR}
-NOPIE=
 
 .PATH: ${S}/lib/libz
 
 .include "${S}/lib/libz/Makefile"
-CFLAGS+=${CEXTRAFLAGS} ${AFLAGS} -I${S}
+CFLAGS+=${CEXTRAFLAGS} ${AFLAGS} -I${S} -fno-pie
