--- a/src/gnu/egcs/libstdc++/Makefile.bsd-wrapper
+++ b/src/gnu/egcs/libstdc++/Makefile.bsd-wrapper
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.bsd-wrapper,v 1.15 2005/01/09 22:27:07 espie Exp $
+#	$OpenBSD: Makefile.bsd-wrapper,v 1.16 2012/08/02 13:38:38 okan Exp $
 
 .if (${MACHINE_ARCH} == "mips")
 NOPIC=
@@ -83,7 +83,7 @@ clean:	_SUBDIRUSE
 	rm -f lib${LIB}.a ${STD_OBJS}
 	rm -f lib${LIB}_g.a ${STD_OBJS:.o=.go}
 	rm -f lib${LIB}_p.a ${STD_OBJS:.o=.po}
-	rm -f lib${LIB}_pic.a lib${LIB}.so.*.* ${STD_OBJS:.o=.so}
+	rm -f lib${LIB}.so.*.* ${STD_OBJS:.o=.so}
 	rm -f llib-l${LIB}.ln ${STD_OBJS:.o=.ln}
 
 GXX_INCDIR=$(DESTDIR)/usr/include/g++
