--- a/src/sys/arch/sgi/stand/boot/Makefile
+++ b/src/sys/arch/sgi/stand/boot/Makefile
@@ -1,13 +1,13 @@
-#	$OpenBSD: Makefile,v 1.13 2012/03/29 20:22:18 miod Exp $
+#	$OpenBSD: Makefile,v 1.14 2012/08/21 14:46:19 pascal Exp $
 
 NOMAN=		noman
-NOPIE=
 
 CFLAGS+=	${SAABI} -mno-abicalls -D_NO_ABICALLS -nostdinc -D__sgi__ \
 		-I${.CURDIR}/../include -I${.CURDIR}/../../../.. \
 		-I${.CURDIR}/../../../../lib/libsa \
 		-I${.OBJDIR}
-CFLAGS+=	-D__INTERNAL_LIBSA_CREAD ${STANDALONE}
+CFLAGS+=	-D__INTERNAL_LIBSA_CREAD ${STANDALONE} -fno-pie
+LDFLAGS+=	-nopie
 
 AFLAGS+=	${SAABI}
 
