--- a/src/sys/arch/sgi/stand/libz/Makefile
+++ b/src/sys/arch/sgi/stand/libz/Makefile
@@ -1,12 +1,10 @@
-#	$OpenBSD: Makefile,v 1.3 2009/05/14 18:57:43 miod Exp $
+#	$OpenBSD: Makefile,v 1.4 2012/08/21 14:46:19 pascal Exp $
 
 S=${.CURDIR}/../../../..
 ZDST=${.OBJDIR}
-
-NOPIE=
 
 .PATH: ${S}/lib/libz
 
 .include "${S}/lib/libz/Makefile"
 CFLAGS+= ${CEXTRAFLAGS} ${SAABI} -mno-abicalls -D_NO_ABICALLS \
-	${AFLAGS} -I${S}
+	${AFLAGS} -fno-pie -I${S}
