--- a/src/usr.bin/tic/Makefile
+++ b/src/usr.bin/tic/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.4 2007/02/27 21:07:40 miod Exp $
+#	$OpenBSD: Makefile,v 1.5 2011/06/23 22:46:12 schwarze Exp $
 
 PROG=	tic
 SRCS=	dump_entry.c tic.c
@@ -10,8 +10,9 @@ CURSES=	${.CURDIR}/../../lib/libcurses
 CFLAGS+= -I${CURSES} -I${.CURDIR} -I.
 CLEANFILES+= termsort.c captoinfo.1
 
+# Work around gcc optimization bug on sh
 .if (${MACHINE_ARCH} == sh)
-COPTS+=	-O1
+COPTS+=	-O0
 .endif
 
 beforedepend: termsort.c
