--- a/src/libexec/ld.so/arm/Makefile.inc
+++ b/src/libexec/ld.so/arm/Makefile.inc
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile.inc,v 1.2 2005/10/23 06:04:03 drahn Exp $
+#	$OpenBSD: Makefile.inc,v 1.3 2011/03/12 18:53:07 deraadt Exp $
 
 CFLAGS += -fpic -msoft-float
 AFLAGS += -D_STANDALONE
-AFLAGS += -I${.CURDIR}/../../lib/libc/arch/arm
+CPPFLAGS += -I${.CURDIR}/../../lib/libc/arch/arm
 SRCS+= divsi3.S
 ELF_LDFLAGS+=-z nocombreloc
 LIBCSRCDIR=${.CURDIR}/../../lib/libc
