--- a/src/sbin/ifconfig/Makefile
+++ b/src/sbin/ifconfig/Makefile
@@ -1,10 +1,11 @@
-#	$OpenBSD: Makefile,v 1.10 2009/11/22 22:00:24 claudio Exp $
-
-.PATH:	${.CURDIR}/../bioctl
+#	$OpenBSD: Makefile,v 1.11 2010/10/18 04:10:56 deraadt Exp $
 
 PROG=	ifconfig
-SRCS=	ifconfig.c brconfig.c pbkdf2.c
+SRCS=	ifconfig.c brconfig.c
 MAN=	ifconfig.8
+
+LDADD=	-lutil
+DPADD=	${LIBUTIL}
 
 CPPFLAGS+=-DINET6 -I${.CURDIR}/../bioctl
 
