--- a/src/regress/lib/libutil/Makefile
+++ b/src/regress/lib/libutil/Makefile
@@ -1,8 +1,8 @@
-# $OpenBSD$
+# $OpenBSD: Makefile,v 1.1 2003/05/15 01:51:01 ian Exp $
 
 # Makefile for regress/libutil
 
-SUBDIR=		fmt_scaled
+SUBDIR=		fmt_scaled pkcs5_pbkdf2
 
 include:
 
