--- a/src/sbin/ifconfig/Makefile
+++ b/src/sbin/ifconfig/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.11 2010/10/18 04:10:56 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.12 2012/09/06 19:41:59 tedu Exp $
 
 PROG=	ifconfig
 SRCS=	ifconfig.c brconfig.c
@@ -7,6 +7,6 @@ MAN=	ifconfig.8
 LDADD=	-lutil
 DPADD=	${LIBUTIL}
 
-CPPFLAGS+=-DINET6 -I${.CURDIR}/../bioctl
+CPPFLAGS+=-DINET6
 
 .include <bsd.prog.mk>
