--- a/src/sys/arch/armish/stand/boot/Makefile
+++ b/src/sys/arch/armish/stand/boot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.7 2008/06/09 15:01:56 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.8 2012/08/21 14:46:18 pascal Exp $
 
 .include "${.CURDIR}/../Makefile.inc"
 
@@ -14,7 +14,7 @@ S=		${.CURDIR}/../../../..
 
 CPPFLAGS+=	-D_STANDALONE
 CPPFLAGS+= 	-nostdinc -I../.. -I. -I${.CURDIR} -I${S}
-CPPFLAGS+=	-DCONADDR=0xfe800000UL -DCONSPEED=115200
+CPPFLAGS+=	-DCONADDR=0xfe800000UL -DCONSPEED=115200 -fno-pie
 
 COPTS+=		-ffreestanding -fno-stack-protector
 
@@ -35,7 +35,6 @@ USE_LOADFILE=	yes
 LIBSA=          ${SALIB}
 
 LDFLAGS=	-T ${.CURDIR}/ldscript
-NOPIE=
 
 ${PROG}: ${OBJS} ${LIBSA}
 	${LD} ${LDFLAGS} -o boot ${OBJS} ${LIBSA} ${LIBSA}
