--- a/src/usr.sbin/snmpd/Makefile
+++ b/src/usr.sbin/snmpd/Makefile
@@ -1,12 +1,12 @@
-#	$OpenBSD: Makefile,v 1.7 2012/02/23 03:54:38 joel Exp $
+#	$OpenBSD: Makefile,v 1.8 2012/03/20 03:01:26 joel Exp $
 
 PROG=		snmpd
 MAN=		snmpd.8 snmpd.conf.5
 SRCS=		parse.y ber.c log.c control.c snmpe.c \
 		    mps.c trap.c mib.c smi.c kroute.c snmpd.c timer.c \
-		    pf.c
+		    pf.c usm.c
 
-LDADD=		-levent -lutil -lkvm
+LDADD=		-levent -lutil -lkvm -lcrypto
 DPADD=		${LIBEVENT} ${LIBUTIL}
 CFLAGS+=	-Wall -I${.CURDIR}
 CFLAGS+=	-Wstrict-prototypes -Wmissing-prototypes
