--- a/src/etc/mtree/4.4BSD.dist
+++ b/src/etc/mtree/4.4BSD.dist
@@ -1,4 +1,4 @@
-#	$OpenBSD: 4.4BSD.dist,v 1.225 2012/08/23 06:17:58 deraadt Exp $
+#	$OpenBSD: 4.4BSD.dist,v 1.226 2012/08/23 07:09:41 deraadt Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 # .
@@ -186,6 +186,11 @@ mtree
 # ./etc/nginx
 nginx
 # ./etc/nginx
+..
+
+# ./etc/npppd
+npppd
+# ./etc/npppd
 ..
 
 # ./etc/ppp
