--- a/src/usr.bin/make/Makefile
+++ b/src/usr.bin/make/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.52 2010/10/17 22:54:37 schwarze Exp $
+#	$OpenBSD: Makefile,v 1.53 2012/09/21 07:55:20 espie Exp $
 
 PROG=	make
 CFLAGS+= -I${.OBJDIR} -I${.CURDIR}
@@ -57,9 +57,6 @@ regress: check
 var.o: varhashconsts.h
 cond.o: condhashconsts.h
 targ.o parse.o: nodehashconsts.h
-var.ln: varhashconsts.h
-cond.ln: condhashconsts.h
-targ.ln parse.ln: nodehashconsts.h
 
 .PHONY:		regress
 
