--- a/src/sys/arch/amd64/stand/biosboot/Makefile
+++ b/src/sys/arch/amd64/stand/biosboot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.4 2012/08/21 14:46:18 pascal Exp $
+#	$OpenBSD: Makefile,v 1.5 2012/08/29 17:45:00 pascal Exp $
 
 MAN=	biosboot.8
 
@@ -6,8 +6,8 @@ MAN=	biosboot.8
 PROG=	biosboot
 SRCS=	biosboot.S
 LD=ld
-LDFLAGS=-melf_i386 -nostdlib -Ttext 0 -N -x -Bstatic -nopie
-LDFLAGS+=-L/usr/libdata 
+LDFLAGS=-nostdlib -Ttext 0 -N -x -Bstatic -nopie
+LDFLAGS+=-melf_i386 -L/usr/libdata 
 INSTALL_STRIP=
 SADIR=	${.CURDIR}/..
 
