--- a/src/usr.bin/make/Makefile
+++ b/src/usr.bin/make/Makefile
@@ -1,10 +1,10 @@
-#	$OpenBSD: Makefile,v 1.53 2012/09/21 07:55:20 espie Exp $
+#	$OpenBSD: Makefile,v 1.54 2012/09/21 10:01:52 espie Exp $
 
 PROG=	make
 CFLAGS+= -I${.OBJDIR} -I${.CURDIR}
 HOSTCFLAGS+= -I${.OBJDIR} -I${.CURDIR}
 CDIAGFLAGS=-Wall -W -Wno-char-subscripts -Wstrict-prototypes -pedantic \
-	-Wmissing-prototypes
+	-Wmissing-prototypes -Wdeclaration-after-statement
 
 CDEFS+=-DUSE_TIMESPEC
 CDEFS+=-DHAS_BOOL_H
