--- a/src/etc/mtree/BSD.x11.dist
+++ b/src/etc/mtree/BSD.x11.dist
@@ -1,4 +1,4 @@
-#       $OpenBSD: BSD.x11.dist,v 1.26 2012/04/08 10:06:22 matthieu Exp $
+#       $OpenBSD: BSD.x11.dist,v 1.27 2012/09/23 08:32:19 matthieu Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 .
@@ -291,17 +291,7 @@
                             sgi_vndr
                             ..
                         ..
-                        keymap
-                           digital_vndr
-                           ..
-                           sgi_vndr
-                           ..
-                           sun_vndr
-                           ..
-                        ..
                         rules
-                        ..
-                        semantics
                         ..
                         symbols
                             digital_vndr
@@ -317,6 +307,8 @@
                             nokia_vndr
                             ..
                             sgi_vndr
+                            ..
+                            sharp_vndr
                             ..
                             sony_vndr
                             ..
