--- a/src/etc/mail/smtpd.conf
+++ b/src/etc/mail/smtpd.conf
@@ -1,11 +1,16 @@
-#	$OpenBSD: smtpd.conf,v 1.3 2012/05/12 18:47:41 gilles Exp $
+#	$OpenBSD: smtpd.conf,v 1.4 2012/07/16 05:56:16 jmc Exp $
 
 # This is the smtpd server system-wide configuration file.
 # See smtpd.conf(5) for more information.
 
+# To accept external mail, replace with: listen on all
+#
 listen on lo0
 
 map aliases source db "/etc/mail/aliases.db"
 
+# Uncomment the following to accept external mail for domain "example.org"
+#
+# accept from any for domain "example.org" alias aliases deliver to mbox
 accept for local alias aliases deliver to mbox
-accept for all relay
+accept for any relay
