Build a 'fdboot' that will be used for floppy disk media. This can be made smaller than the normal 'boot', however for now it is identical.
ok deraadt@

--- a/src/sys/arch/amd64/stand/Makefile
+++ b/src/sys/arch/amd64/stand/Makefile
@@ -3,6 +3,6 @@
 .if ${MACHINE} == "amd64"
 SUBDIR=	etc mbr cdbr
 .endif
-SUBDIR+= biosboot installboot boot pxeboot cdboot
+SUBDIR+= biosboot boot cdboot fdboot installboot pxeboot
 
 .include <bsd.subdir.mk>
