--- a/src/sys/arch/amd64/stand/boot/Makefile
+++ b/src/sys/arch/amd64/stand/boot/Makefile
@@ -2,14 +2,14 @@
 
 .include "${.CURDIR}/../Makefile.inc"
 
-MAN=	boot.8
-MLINKS=	boot.8 boot.conf.5
+MAN?=	boot.8
+MLINKS?=boot.8 boot.conf.5
 
 .if ${MACHINE} == "amd64"
 S	=${.CURDIR}/../../../..
 SADIR=	${.CURDIR}/..
 
-PROG=	boot
+PROG?=	boot
 SRCS=	srt0.S conf.c
 LD?=	ld
 SIZE?=	size
