Only build fdboot on the appropriate architectures. Also fix the path to check-boot.pl so that it works with both boot and fdboot.

--- a/src/sys/arch/amd64/stand/boot/Makefile
+++ b/src/sys/arch/amd64/stand/boot/Makefile
@@ -50,7 +50,7 @@ CLEANFILES+= ${PROG}.new
 
 ${PROG}: $(OBJS)
 	$(LD) $(LDFLAGS) -o ${PROG}.new $(OBJS)
-	@perl ${.CURDIR}/check-boot.pl ${PROG}.new
+	@perl ${SADIR}/boot/check-boot.pl ${PROG}.new
 	@mv ${PROG}.new ${PROG}
 	@$(SIZE) ${PROG}
 
