--- a/src/sys/arch/i386/stand/boot/Makefile
+++ b/src/sys/arch/i386/stand/boot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.42 2012/10/12 14:58:26 jsing Exp $
+#	$OpenBSD: Makefile,v 1.43 2012/10/12 15:03:22 jsing Exp $
 
 .include "${.CURDIR}/../Makefile.inc"
 
@@ -57,7 +57,7 @@ CLEANFILES+= ${PROG}.new
 
 ${PROG}: $(OBJS)
 	$(LD) $(LDFLAGS) -o ${PROG}.new $(OBJS)
-	@perl ${.CURDIR}/check-boot.pl ${PROG}.new
+	@perl ${SADIR}/boot/check-boot.pl ${PROG}.new
 	@mv ${PROG}.new ${PROG}
 	@$(SIZE) ${PROG}
 
