--- a/src/sys/arch/i386/stand/fdboot/Makefile
+++ b/src/sys/arch/i386/stand/fdboot/Makefile
@@ -1,10 +1,12 @@
-#	$OpenBSD$
-
-PROG=	fdboot
-COPTS=	-DFDBOOT
+#	$OpenBSD: Makefile,v 1.1 2012/10/12 14:00:02 jsing Exp $
 
 MAN=
 MLINKS=
+
+.if ${MACHINE} == "i386"
+PROG=	fdboot
+COPTS=	-DFDBOOT
+.endif
 
 .PATH:	${.CURDIR}/../boot
 
