--- a/src/usr.sbin/ldomctl/Makefile
+++ b/src/usr.sbin/ldomctl/Makefile
@@ -1,7 +1,8 @@
-#	$OpenBSD$
+#	$OpenBSD: Makefile,v 1.1 2012/10/14 15:38:06 kettenis Exp $
 
 PROG=	ldomctl
+SRCS=	ldomctl.c mdesc.c
 NOMAN=
-CFLAGS= -Wall
+CFLAGS+= -Wall
 
 .include <bsd.prog.mk>
