--- a/src/usr.sbin/ldomctl/Makefile
+++ b/src/usr.sbin/ldomctl/Makefile
@@ -1,8 +1,9 @@
-#	$OpenBSD: Makefile,v 1.1 2012/10/14 15:38:06 kettenis Exp $
+#	$OpenBSD: Makefile,v 1.2 2012/10/15 20:28:50 kettenis Exp $
 
 PROG=	ldomctl
-SRCS=	ldomctl.c mdesc.c
+SRCS=	ldomctl.c ds.c mdesc.c
 NOMAN=
 CFLAGS+= -Wall
+DEBUG= -g
 
 .include <bsd.prog.mk>
