--- a/src/usr.sbin/ospf6d/Makefile
+++ b/src/usr.sbin/ospf6d/Makefile
@@ -1,10 +1,10 @@
-#	$OpenBSD: Makefile,v 1.2 2007/10/09 06:28:45 claudio Exp $
+#	$OpenBSD: Makefile,v 1.3 2010/05/26 16:44:32 nicm Exp $
 
 PROG=	ospf6d
 SRCS=	area.c carp.c control.c database.c hello.c \
 	interface.c iso_cksum.c kroute.c lsack.c \
 	lsreq.c lsupdate.c log.c neighbor.c ospf6d.c ospfe.c packet.c \
-	parse.y printconf.c rde.c rde_lsdb.c rde_spf.c name2id.c
+	parse.y printconf.c rde.c rde_lsdb.c rde_spf.c util.c name2id.c
 
 MAN=	ospf6d.8 ospf6d.conf.5
 
