--- a/src/usr.sbin/ldomd/Makefile
+++ b/src/usr.sbin/ldomd/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: Makefile,v 1.4 2012/10/21 12:56:45 kettenis Exp $
+#	$OpenBSD: Makefile,v 1.1 2012/10/26 18:26:13 kettenis Exp $
 
 .PATH:	${.CURDIR}/../ldomctl
 
 PROG=	ldomd
-SRCS=	ldomd.c ds.c mdesc.c util.c
+SRCS=	ldomd.c ds.c mdesc.c util.c var-config.c
 NOMAN=
 CFLAGS+= -Wall
 CFLAGS+= -I${.CURDIR}/../ldomctl
