--- a/src/regress/usr.bin/mandoc/mdoc/Bk/Makefile
+++ b/src/regress/usr.bin/mandoc/mdoc/Bk/Makefile
@@ -1,6 +1,6 @@
-# $OpenBSD: Makefile,v 1.2 2011/11/17 16:28:45 schwarze Exp $
+# $OpenBSD: Makefile,v 1.3 2012/07/07 14:10:55 schwarze Exp $
 
-REGRESS_TARGETS=break badarg
+REGRESS_TARGETS = break synopsis badarg
 
 SKIP_TMAN ?= badarg
 
