Clean up/standardise makefiles for amd64/stand.

--- a/src/sys/arch/amd64/stand/biosboot/Makefile
+++ b/src/sys/arch/amd64/stand/biosboot/Makefile
@@ -3,17 +3,19 @@
 MAN=	biosboot.8
 
 .if ${MACHINE} == "amd64"
+S=	${.CURDIR}/../../../..
+SADIR=	${.CURDIR}/..
+
 PROG=	biosboot
 SRCS=	biosboot.S
 LD=ld
 LDFLAGS=-nostdlib -Ttext 0 -N -x -Bstatic -nopie
 LDFLAGS+=-melf_i386 -L/usr/libdata 
 INSTALL_STRIP=
-SADIR=	${.CURDIR}/..
 
-${PROG}: $(OBJS) $(DPADD)
+${PROG}: $(OBJS)
 	@rm -f $(PROG)
-	$(LD) $(LDFLAGS) -o $(PROG) $(OBJS) $(LDADD)
+	$(LD) $(LDFLAGS) -o $(PROG) $(OBJS)
 	@size $(PROG)
 
 CPPFLAGS+=-DLOADADDR=$(LOADADDR) -DLINKADDR=$(LINKADDR) -DBOOTMAGIC=$(BOOTMAGIC)
@@ -26,4 +28,3 @@ NOPROG=
 .endif
 
 .include <bsd.prog.mk>
-
