--- a/src/sys/arch/amd64/stand/cdbr/Makefile
+++ b/src/sys/arch/amd64/stand/cdbr/Makefile
@@ -1,6 +1,9 @@
 #	$OpenBSD: Makefile,v 1.5 2012/08/29 17:45:00 pascal Exp $
 #
 
+S=	${.CURDIR}/../../../..
+SADIR=	${.CURDIR}/..
+
 PROG=	cdbr
 SRCS=	cdbr.S
 AFLAGS+=-m32
@@ -12,18 +15,16 @@ LD=ld
 ORG=	0x0000
 LDFLAGS=-nostdlib -Ttext ${ORG} -x -N -s -Bstatic -e start -nopie
 LDFLAGS+=-melf_i386 -L/usr/libdata 
+INSTALL_STRIP=
 
 NOMAN=
 #MAN+=	cdbr.8
-
-INSTALL_STRIP=
-SADIR=${.CURDIR}/..
-S=	${.CURDIR}/../../../..
 
 ${PROG}: $(OBJS) $(DPADD)
 	$(LD) $(LDFLAGS) -o $(PROG) $(OBJS) $(LDADD)
 	@size $(PROG)
 	@if [ -x ${.OBJDIR}/${PROG} ]; then \
+		cp ${PROG} ${PROG}.orig; \
 		objcopy -O binary ${PROG} ${.OBJDIR}/.tmp;\
 		mv -f ${.OBJDIR}/.tmp ${.OBJDIR}/${PROG}; \
 		ls -l ${.OBJDIR}/${PROG}; \
