--- a/src/sys/arch/amd64/stand/pxeboot/Makefile
+++ b/src/sys/arch/amd64/stand/pxeboot/Makefile
@@ -1,11 +1,9 @@
-#	$OpenBSD: Makefile,v 1.11 2012/09/25 09:01:03 pascal Exp $
-
-.include "${.CURDIR}/../Makefile.inc"
+#	$OpenBSD: Makefile,v 1.13 2012/10/29 14:20:10 jsing Exp $
 
 MAN=	pxeboot.8
 
 .if ${MACHINE} == "amd64"
-S	=${.CURDIR}/../../../..
+S=	${.CURDIR}/../../../..
 SADIR=	${.CURDIR}/..
 
 PROG=	pxeboot
