Clean up/standardise makefiles for i386/stand.

--- a/src/sys/arch/i386/stand/biosboot/Makefile
+++ b/src/sys/arch/i386/stand/biosboot/Makefile
@@ -1,18 +1,20 @@
-#	$OpenBSD: Makefile,v 1.22 2012/08/21 14:46:18 pascal Exp $
+#	$OpenBSD: Makefile,v 1.23 2012/08/29 22:23:07 pascal Exp $
 
 MAN=	biosboot.8
 
 .if ${MACHINE} == "i386"
+S=	${.CURDIR}/../../../..
+SADIR=	${.CURDIR}/..
+
 PROG=	biosboot
 SRCS=	biosboot.S
 LD=ld
 LDFLAGS=-nostdlib -Ttext 0 -N -x -Bstatic -nopie
 INSTALL_STRIP=
-SADIR=	${.CURDIR}/..
 
-${PROG}: $(OBJS) $(DPADD)
+${PROG}: $(OBJS)
 	@rm -f $(PROG)
-	$(LD) $(LDFLAGS) -o $(PROG) $(OBJS) $(LDADD)
+	$(LD) $(LDFLAGS) -o $(PROG) $(OBJS)
 	@size $(PROG)
 
 CPPFLAGS+=-DLOADADDR=$(LOADADDR) -DLINKADDR=$(LINKADDR) -DBOOTMAGIC=$(BOOTMAGIC)
@@ -25,4 +27,3 @@ NOPROG=
 .endif
 
 .include <bsd.prog.mk>
-
