--- a/src/usr.bin/tip/Makefile
+++ b/src/usr.bin/tip/Makefile
@@ -1,8 +1,7 @@
-#	$OpenBSD: Makefile,v 1.14 2010/06/29 20:09:39 nicm Exp $
+#	$OpenBSD: Makefile,v 1.15 2010/07/02 07:40:03 nicm Exp $
 
 PROG=	tip
-LINKS=	${BINDIR}/tip ${BINDIR}/cu
-MAN=	tip.1 cu.1
+MAN=	tip.1
 
 CFLAGS+=-I${.CURDIR} -DDEFBR=9600 -DDEFFS=BUFSIZ
 LDADD=  -lutil
