the unused palm code goes away.

--- a/src/etc/mtree/4.4BSD.dist
+++ b/src/etc/mtree/4.4BSD.dist
@@ -1,4 +1,4 @@
-#	$OpenBSD: 4.4BSD.dist,v 1.226 2012/08/23 07:09:41 deraadt Exp $
+#	$OpenBSD: 4.4BSD.dist,v 1.227 2012/09/20 12:51:43 yasuoka Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 # .
@@ -1314,8 +1314,6 @@ macppc
 mvme68k
 ..
 mvme88k
-..
-palm
 ..
 sgi
 ..
