also listen on v6 by default; ok matthieu@ deraadt@

--- a/src/usr.sbin/nginx/conf/nginx.conf
+++ b/src/usr.sbin/nginx/conf/nginx.conf
@@ -1,4 +1,4 @@
-# $OpenBSD: nginx.conf,v 1.10 2012/11/06 20:07:23 pascal Exp $
+# $OpenBSD: nginx.conf,v 1.11 2013/02/09 10:50:26 ajacoutot Exp $
 
 #user  www;
 worker_processes  1;
@@ -39,6 +39,7 @@ http {
 
     server {
         listen       80;
+        listen       [::]:80;
         server_name  localhost;
         root         /var/www/htdocs;
 
