Revert previous: libsa/ufs.c was fixed to not use big types when not necessary.  If something crawls in again that needs these we want to know
ok deraadt@

--- a/src/sys/arch/i386/stand/boot/Makefile
+++ b/src/sys/arch/i386/stand/boot/Makefile
@@ -56,7 +56,7 @@ SRCS+=	aes_xts.c explicit_bzero.c hmac_sha1.c pbkdf2.c rijndael.c sha1.c
 SRCS+=	strlcpy.c
 
 .PATH:	${S}/lib/libkern/arch/i386
-SRCS+=	divdi3.c moddi3.c qdivrem.c udivdi3.c umoddi3.c
+SRCS+=	divdi3.c moddi3.c qdivrem.c
 
 .PATH:	${S}/lib/libz
 SRCS+=	adler32.c crc32.c inflate.c inftrees.c
